@@ -130,6 +130,12 @@ New Features
 * LUCENE-4752: New SortingMergePolicy (in lucene/misc) that sorts documents
   before merging segments. (Adrien Grand, Shai Erera, David Smiley)
 
+* LUCENE-4860: Customize scoring and formatting per-field in
+  PosthingsHighlighter by subclassing and overriding the getFormatter
+  and/or getScorer methods.  This also changes Passage.getMatchTerms()
+  to return BytesRef[] instead of Term[].  (Robert Muir, Mike
+  McCandless)
+
 API Changes
 
 * LUCENE-4844: removed TaxonomyReader.getParent(), you should use
